Fixed alignment of talk thumbnails

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -276,8 +276,8 @@ section.upcoming {
 	}
 }
 
-.column-4 .column-2:first-child {
-	margin-left: 0;
+.column-4 .row:first-child {
+	padding-top: 0;
 }
 
 .volunteers > section {
